Fix naming of metadata
Version --> Revision
Length --> "# of tasks"

Also changed field to "revision" in model. Change in SQLite is
necessary as well.

--- a/codequiz-server/quiz/templates/tasks/cq1_task_meta.html
+++ b/codequiz-server/quiz/templates/tasks/cq1_task_meta.html
@@ -35,9 +35,9 @@
     </div>
     <div class="row">
         <div class="left">
-            <p>Version:</p>
+            <p>Revision:</p>
         </div>
-        <div class="right"> {{ task.versionstring }} </div>
+        <div class="right"> {{ task.revision }} </div>
     </div>
     <div class="row">
         <div class="left">
