--- a/codequiz-server/quiz/templates/tasks/cq1_taskcollection_meta.html
+++ b/codequiz-server/quiz/templates/tasks/cq1_taskcollection_meta.html
@@ -26,8 +26,8 @@
     </div>
     <div class="row">
         <div class="left">
-            <p>Length:</p>
+            <p># of tasks:</p>
         </div>
-        <div class="right"> {{ tc.len }} </div>
+        <div class="right"> {{ tc.number_of_tasks }} </div>
     </div>
 </div>
