--- a/codequiz-server/quiz/templates/tasks/cq1_task_meta.html
+++ b/codequiz-server/quiz/templates/tasks/cq1_task_meta.html
@@ -16,54 +16,54 @@
 
 <div class="container">
     <div class="row">
-        <div class="left">
+        <div class="cell">
             <p>Title:</p>
         </div>
-        <div class="right" style="width:180px"> {{ task.title }} </div>
+        <div class="cell" style="width:180px"> {{ task.title }} </div>
     </div>
     <div class="row">
-        <div class="left">
+        <div class="cell">
             <p>ID:</p>
         </div>
-        <div class="right"> {{ task.id }} </div>
+        <div class="cell"> {{ task.id }} </div>
     </div>
     <div class="row">
-        <div class="left">
+        <div class="cell">
             <p>Author:</p>
         </div>
-        <div class="right"> {{ task.author }} </div>
+        <div class="cell"> {{ task.author }} </div>
     </div>
     <div class="row">
-        <div class="left">
+        <div class="cell">
             <p>Revision:</p>
         </div>
-        <div class="right"> {{ task.revision }} </div>
+        <div class="cell"> {{ task.revision }} </div>
     </div>
     <div class="row">
-        <div class="left">
+        <div class="cell">
             <p>Quality:</p>
         </div>
-        <div class="right">
+        <div class="cell">
             <form id="qualityratingform" action="{% url "ratings_vote" %}" class="ratings" method="post">
                 {% csrf_token %}
                 {{ rating_form_quality }}
                 <span id="score_quality"
-                      style="padding-left: 5px">{{ score_quality.average }} ({{ score_quality.num_votes }})</span>
+                      style="padding-cell: 5px">{{ score_quality.average }} ({{ score_quality.num_votes }})</span>
                 <span class="success" style="display: none;"></span>
                 <span class="error" style="display: none;">Errors...</span>
             </form>
         </div>
     </div>
     <div class="row">
-        <div class="left">
+        <div class="cell">
             <p>Difficulty:</p>
         </div>
-        <div class="right">
+        <div class="cell">
             <form id="difficultyratingform" action="{% url "ratings_vote" %}" class="ratings" method="post">
                 {% csrf_token %}
                 {{ rating_form_difficulty }}
                 <span id="score_difficulty"
-                      style="padding-left: 5px">{{ score_difficulty.average }} ({{ score_difficulty.num_votes }})</span>
+                      style="padding-cell: 5px">{{ score_difficulty.average }} ({{ score_difficulty.num_votes }})</span>
                 <span class="success" style="display: none;"></span>
                 <span class="error" style="display: none;">Errors...</span>
             </form>
