--- a/codequiz-server/quiz/templates/tasks/cq0_main.html
+++ b/codequiz-server/quiz/templates/tasks/cq0_main.html
@@ -16,7 +16,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js" type="text/javascript"></script>
 
     {# part of django-generic-ratings http://django-generic-ratings.readthedocs.org#}
-    <script type="text/javascript" src="{{ STATIC_URL }}jquery-rating/jquery.MetaData.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}jquery-rating/jquery.metadata.js"></script>
     <script src="{{ STATIC_URL }}ratings/js/ratings.js" type="text/javascript"></script>
 
     {# part of jquery star rating plugin http://www.fyneworks.com/jquery/star-rating/ #}
