--- a/codequiz-server/quiz/templates/tasks/cq1_taskcollection_meta.html
+++ b/codequiz-server/quiz/templates/tasks/cq1_taskcollection_meta.html
@@ -7,27 +7,23 @@
 
 <div class="container">
     <div class="row">
-        <div class="cell">
-            <p>Title:</p>
-        </div>
+        <div class="cell">Title:</div>
         <div class="cell"> {{ tc.title }} </div>
     </div>
     <div class="row">
-        <div class="cell">
-            <p>ID:</p>
-        </div>
+        <div class="cell">ID:</div>
         <div class="cell"> {{ tc.id }} </div>
     </div>
     <div class="row">
-        <div class="cell">
-            <p>Author:</p>
-        </div>
+        <div class="cell">Author:</div>
         <div class="cell"> {{ tc.author }} </div>
     </div>
     <div class="row">
-        <div class="cell">
-            <p># of tasks:</p>
-        </div>
+        <div class="cell"># of tasks:</div>
         <div class="cell"> {{ tc.number_of_tasks }} </div>
+    </div>
+    <div class="row">
+        <div class="cell">Tags:</div>
+        <div class="cell"> {{ tc.tags_as_string }} </div>
     </div>
 </div>
