--- a/codequiz-server/quiz/static/tasks/tabular_style.css
+++ b/codequiz-server/quiz/static/tasks/tabular_style.css
@@ -1,18 +1,20 @@
 div.container {
     display: table;
-    }
-div.row  {
+}
+
+div.row {
     display: table-row;
-    }
+}
 
 div.cell {
     display: table-cell;
-    padding-right: 25px;
-    }
+    padding-right: 20px;
+    padding-bottom: 5px;
+}
 
 div.cell p {
     margin: 1px 1px;
-   }
+}
 
 div.linenumber {
     display: table-cell;
