--- a/codequiz-server/quiz/templates/tasks/cq1_task_meta.html
+++ b/codequiz-server/quiz/templates/tasks/cq1_task_meta.html
@@ -63,6 +63,8 @@
     </div>
 </div>
 
+{% include "feedback/button.html" %}
+
 {# JS for updating the average ratings on the fly #}
 <script type="text/javascript" charset="utf-8">
 
