--- a/codequiz-server/quiz/templates/tasks/cq0_main.html
+++ b/codequiz-server/quiz/templates/tasks/cq0_main.html
@@ -22,6 +22,8 @@
     {# part of jquery star rating plugin http://www.fyneworks.com/jquery/star-rating/ #}
     <link href="{{ STATIC_URL }}jquery-rating/jquery.rating.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="{{ STATIC_URL}}jquery-rating/jquery.rating.js"></script>
+
+    {% include "feedback/header.html" %}  # to make the feedback form ajaxy
 </head>
 
 <body>
