Fix stray comment

--- a/codequiz-server/quiz/templates/tasks/cq0_main.html
+++ b/codequiz-server/quiz/templates/tasks/cq0_main.html
@@ -23,7 +23,7 @@
     <link href="{{ STATIC_URL }}jquery-rating/jquery.rating.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="{{ STATIC_URL}}jquery-rating/jquery.rating.js"></script>
 
-    {% include "feedback/header.html" %}  # to make the feedback form ajaxy
+    {% include "feedback/header.html" %}  {# to make the feedback form ajaxy #}
 </head>
 
 <body>
