Clean up <pre> code parts in tasks
This included some template and style fixing, but also removing
superflous newline characters on the fly that shouldn't have been there
at all.

--- a/codequiz-server/quiz/templates/tasks/part_input_list.html
+++ b/codequiz-server/quiz/templates/tasks/part_input_list.html
@@ -7,7 +7,7 @@
 
 
     {% if input_list %}
-        <div class="container" style="width: 100%; padding-top: 20pt">
+        <div class="container" style="width: 100%;">
             {% for element in input_list %}
                 <div class="row" style="height: 40pt">
                     <div class="linenumber">
