--- a/codequiz-server/quiz/templates/tasks/src.html
+++ b/codequiz-server/quiz/templates/tasks/src.html
@@ -1,9 +1,7 @@
 <!-- ==> start: src.html -->
 {% if multiline %}
-<pre class="src">
-{{text}}
-</pre>
+    <pre class="src">{{ text }}</pre>
 {% else %}
-<span class="src"> {{text}} </span>
+    <span class="src"> {{ text }} </span>
 {% endif %}
 <!-- ==> end: src.html -->
